Added the terraform configuration for Master Machine and EKS cluster

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### .terraform ###
+.terraform/
+terraform/terra-key
+terraform/terra-key.pub
+terraform/.terraform.lock.hcl
+
